# overcomplete

./: .bumpversion.cfg  .gitignore  .pylintrc  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: lint.yml  publish.yml  tox.yml
css/: extra.css
docs/: index.md  metrics.md
docs/css/: extra.css
metrics/: index.html
optimization/convexnmf/: index.html
optimization/nmf/: index.html
optimization/seminmf/: index.html
overcomplete/: __init__.py  data.py  metrics.py  models.py  optimization.py  plots.py
overcomplete/methods/: __init__.py  base.py  optimization.py
overcomplete/optimization/: __init__.py  convex_nmf.py  nmf.py  semi_nmf.py  utils.py
overcomplete/sae/: __init__.py  archetypal_dictionary.py  base.py  batchtopk_sae.py  dictionary.py  factory.py  jump_sae.py  losses.py  modules.py  mp_sae.py  qsae.py  ra_sae.py  topk_sae.py  train.py
overcomplete/visualization/: __init__.py  cmaps.py  plot_utils.py  top_concepts.py
saes/archetypal/: index.html
saes/archetypal_saes/: index.html
saes/batchtopk/: index.html
saes/dead_codes/: index.html
saes/jumprelu/: index.html
saes/mp/: index.html
saes/omp/: index.html
search/: search_index.json
tests/: test_base_sae.py  test_factory.py  test_metrics.py  test_models.py  test_nmf.py  test_optim_dictionnaries.py  test_plots.py  test_sae_cuda.py  test_sae_dictionary.py  test_sae_modules.py  test_schedulers.py  test_semi_nmf.py  test_train.py  test_train_sae.py  test_visualization.py  utils.py
visualization/: index.html
(+28 files in other folders)
