[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Overcomplete"
version = "0.0.1"
description = "Personal toolbox for experimenting with Overcomplete Dictionary Learning (or SAE)"
readme = "README.md"
readme-content-type = "text/markdown"
authors = [
    { name = "Thomas Fel", email = "thomas_fel@brown.edu" }
]
license = { text = "MIT" }
dependencies = [
    "numpy",
    "matplotlib",
    "torch",
    "torchvision",
    "timm",
]
python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.bumpversion]
current_version = "0.0.1"
commit = true
tag = true

[tool.bumpversion.file]
"pyproject.toml" = {}
"overcomplete/__init__.py" = {}

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "F401",
    "D205",
    "D200",
    "D204",
    "D401",
]
extend-select = [
  "UP",  # pyupgrade
  "D",   # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"